Fix: Resize font size for UserBadge at smaller screen sizes
Fixes an issue where the font size of the UserBadge was too large at smaller screen sizes.

--- a/frontend/srcs/game/components/BotMode/BotMode.css
+++ b/frontend/srcs/game/components/BotMode/BotMode.css
@@ -1,6 +1,6 @@
 .container-bootmode {
   position: relative;
-  overflow: hidden; /* Ensure that the pseudo-element doesn't overflow the container */
+  overflow: hidden;
 }
 
 .container-bootmode::before {
@@ -18,7 +18,7 @@
   /* z-index: -1; */
 }
 .container-bootmode > * {
-  position: relative; /* Ensure that direct children are positioned above the pseudo-element */
+  position: relative;
 }
 
 .canvas-container {
@@ -79,6 +79,17 @@
   align-items: center;
 }
 
+
+@media (max-width: 1300px) {
+  .iPongGame-UserBadge-username .username {
+    font-size: 1.5vw !important;
+  }
+  .iPongGame-UserBadge-username .score {
+    /* margin-top: -2px; */
+    font-size: 1.5vw !important;
+  }
+
+}
 /* .container-bootmode {
   width: 100%;
   height: 100%;
